--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.1.6",
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.1",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -46,30 +46,31 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^0.5.0",
-    "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-jsdoc": "^48.2.5",
     "eslint-plugin-jsonc": "^2.15.1",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-n": "^17.5.1",
+    "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-toml": "^0.11.0",
-    "eslint-plugin-unicorn": "^52.0.0",
+    "eslint-plugin-unicorn": "^53.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-vue": "^9.25.0",
+    "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-yml": "^1.14.0",
-    "globals": "^15.1.0",
+    "globals": "^15.2.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.2.5",
     "toml-eslint-parser": "^0.9.3",
@@ -79,12 +80,12 @@
   "devDependencies": {
     "@eslint/config-inspector": "^0.4.8",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "execa": "^8.0.1",
+    "eslint-plugin-tailwindcss": "^3.15.2",
+    "execa": "^9.1.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "react": "^18.3.1",
