--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.1.6",
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.1",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -36,13 +36,7 @@
     "release": "bumpp && pnpm publish"
   },
   "peerDependencies": {
-    "eslint": ">=8.40.0",
-    "eslint-plugin-tailwindcss": "^3.15.1"
-  },
-  "peerDependenciesMeta": {
-    "eslint-plugin-tailwindcss": {
-      "optional": true
-    }
+    "eslint": ">=8.40.0"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
@@ -63,6 +57,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-tailwindcss": "^3.15.2",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^52.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
@@ -72,6 +67,7 @@
     "globals": "^15.1.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "toml-eslint-parser": "^0.9.3",
     "vue-eslint-parser": "^9.4.2",
     "yaml-eslint-parser": "^1.2.2"
@@ -83,7 +79,6 @@
     "@types/react": "^18.3.1",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
