--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react-compiler": "0.0.0-experimental-a97cca1-20240529",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-solid": "^0.14.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^53.0.0",
