--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.3.1",
-  "packageManager": "pnpm@9.3.0",
+  "packageManager": "pnpm@9.4.0",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.4",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -54,11 +54,11 @@
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.11.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-a97cca1-20240529",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-solid": "^0.14.0",
+    "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-tailwindcss": "^3.17.3",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^54.0.0",
@@ -66,10 +66,10 @@
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "^9.26.0",
     "eslint-plugin-yml": "^1.14.0",
-    "globals": "^15.4.0",
+    "globals": "^15.6.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "toml-eslint-parser": "^0.9.3",
     "vue-eslint-parser": "^9.4.3",
     "yaml-eslint-parser": "^1.2.3"
@@ -77,7 +77,7 @@
   "devDependencies": {
     "@eslint/config-inspector": "^0.4.11",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
     "bumpp": "^9.4.1",
     "eslint": "8.57.0",
