--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.3.2",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -39,45 +39,45 @@
     "eslint": ">=8.40.0"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.2.4",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^3.0.1",
-    "eslint-plugin-jsdoc": "^48.5.0",
+    "eslint-plugin-jsdoc": "^48.8.2",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^5.0.0",
+    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.11.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-compiler": "latest",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-0998c1e-20240625",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-refresh": "^0.4.8",
     "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^54.0.0",
     "eslint-plugin-unused-imports": "3.2.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue": "^9.27.0",
     "eslint-plugin-yml": "^1.14.0",
-    "globals": "^15.7.0",
+    "globals": "^15.8.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "toml-eslint-parser": "^0.10.0",
     "vue-eslint-parser": "^9.4.3",
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^0.5.1",
+    "@eslint/config-inspector": "^0.5.2",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "bumpp": "^9.4.1",
     "eslint": "8.57.0",
@@ -86,8 +86,8 @@
     "fs-extra": "^11.2.0",
     "react": "^18.3.1",
     "sucrase": "^3.35.0",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.2",
-    "vitest": "^1.6.0"
+    "tsup": "^8.2.0",
+    "typescript": "^5.5.3",
+    "vitest": "^2.0.3"
   }
 }
