--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.7",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.55",
-    "@typescript-eslint/parser": "8.0.0-alpha.55",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -55,8 +55,8 @@
     "eslint-plugin-perfectionist": "^3.3.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-0998c1e-20240625",
-    "eslint-plugin-react-hooks": "5.1.0-rc-14a4699f-20240725",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-b8a7b48-20240830",
+    "eslint-plugin-react-hooks": "0.0.0-experimental-e56f4ae3-20240830",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-solid": "^0.14.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
