--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint": ">=8.40.0"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.2.7",
+    "@next/eslint-plugin-next": "15.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "eslint-config-prettier": "^9.1.0",
