--- a/package.json
+++ b/package.json
@@ -39,16 +39,15 @@
     "eslint": ">=8.40.0"
   },
   "dependencies": {
+    "@eslint/markdown": "^6.1.0",
     "@next/eslint-plugin-next": "15.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
