--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.8.3",
-  "packageManager": "pnpm@9.12.2",
+  "packageManager": "pnpm@9.13.2",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -40,16 +40,16 @@
   },
   "dependencies": {
     "@eslint/markdown": "^6.2.1",
-    "@next/eslint-plugin-next": "^15.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@next/eslint-plugin-next": "^15.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^4.3.1",
-    "eslint-plugin-jsdoc": "^50.4.3",
-    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-import-x": "^4.4.2",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-jsonc": "^2.18.1",
     "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-n": "^17.11.1",
+    "eslint-plugin-n": "^17.13.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^3.9.1",
     "eslint-plugin-prettier": "^5.2.1",
@@ -57,15 +57,15 @@
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "eslint-plugin-solid": "^0.14.3",
+    "eslint-plugin-solid": "^0.14.4",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^56.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-vue": "^9.29.1",
-    "eslint-plugin-yml": "^1.14.0",
-    "globals": "^15.11.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "eslint-plugin-yml": "^1.15.0",
+    "globals": "^15.12.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
@@ -74,19 +74,19 @@
     "yaml-eslint-parser": "^1.2.3"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^0.5.5",
+    "@eslint/config-inspector": "^0.5.6",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
-    "bumpp": "^9.7.1",
-    "eslint": "^9.13.0",
-    "execa": "^9.4.1",
+    "bumpp": "^9.8.1",
+    "eslint": "9.14.0",
+    "execa": "^9.5.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "react": "^18.3.1",
     "sucrase": "^3.35.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.5"
   }
 }
