--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": ">=8.40.0"
   },
   "dependencies": {
+    "@eslint-react/eslint-plugin": "^1.19.0",
     "@eslint/markdown": "^6.2.1",
     "@next/eslint-plugin-next": "^15.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
@@ -54,7 +55,6 @@
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^4.3.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
