--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
     "release": "pnpm build && bumpp && pnpm publish"
   },
   "peerDependencies": {
-    "eslint": ">=8.40.0"
+    "eslint": ">=8.40.0",
+    "eslint-plugin-mdx": ">=3.1.5"
+  },
+  "peerDependenciesMeta": {
+    "eslint-plugin-mdx": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.19.0",
@@ -50,7 +56,6 @@
     "eslint-plugin-import-x": "^4.5.0",
     "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-jsonc": "^2.18.2",
-    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-n": "^17.15.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^4.3.0",
@@ -80,6 +85,7 @@
     "@types/react": "^19.0.1",
     "bumpp": "^9.9.1",
     "eslint": "^9.16.0",
+    "eslint-plugin-mdx": "^3.1.5",
     "execa": "^9.5.2",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
