--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:earlyMondays"],
-  "labels": ["dependencies"]
+  "extends": ["config:recommended", "schedule:earlyMondays"],
+  "labels": ["dependencies"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["*"],
+      "groupName": "allDependencies",
+      "automerge": true,
+      "automergeType": "pr-comment",
+      "automergeComment": "bors: r+"
+    }
+  ]
 }
