--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     }
   },
   "dependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@eslint-react/eslint-plugin": "^1.22.1",
     "@eslint/markdown": "^6.2.1",
     "@next/eslint-plugin-next": "^15.1.2",
@@ -52,7 +53,6 @@
     "@typescript-eslint/parser": "^8.18.2",
     "@vitest/eslint-plugin": "^1.1.20",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-jsonc": "^2.18.2",
