--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@eslint/config-inspector": "^0.7.1",
     "@types/eslint": "^9.6.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "bumpp": "^9.10.0",
