--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.8.10",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.4.1",
   "description": "Brendan Dash's ESLint config",
-  "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
+  "author": "Brendan Dash <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
   "homepage": "https://github.com/Debbl/eslint-config",
   "keywords": [
@@ -40,33 +40,33 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint-react/eslint-plugin": "^1.24.1",
+    "@eslint-react/eslint-plugin": "^1.27.0",
     "@eslint/markdown": "^6.2.2",
-    "@next/eslint-plugin-next": "^15.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "@vitest/eslint-plugin": "^1.1.25",
+    "@next/eslint-plugin-next": "^15.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "@vitest/eslint-plugin": "^1.1.31",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-jsdoc": "^50.6.2",
-    "eslint-plugin-jsonc": "^2.18.2",
+    "eslint-plugin-jsdoc": "^50.6.3",
+    "eslint-plugin-jsonc": "^2.19.1",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.7.0",
+    "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unicorn": "^57.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "^9.32.0",
-    "eslint-plugin-yml": "^1.16.0",
-    "globals": "^15.14.0",
+    "eslint-plugin-yml": "^1.17.0",
+    "globals": "^16.0.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "toml-eslint-parser": "^0.10.0",
     "vue-eslint-parser": "^9.4.3",
@@ -76,17 +76,22 @@
     "@eslint/config-inspector": "^1.0.0",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.10",
-    "@types/react": "^19.0.8",
-    "bumpp": "^9.10.2",
-    "eslint": "^9.18.0",
+    "@types/node": "^22.13.5",
+    "@types/react": "^19.0.10",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.21.0",
     "execa": "^9.5.2",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "react": "^19.0.0",
     "sucrase": "^3.35.0",
-    "tsup": "^8.3.5",
+    "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.7"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
