--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "watch": "tsup --format esm,cjs --watch",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "lint": "pnpm run stub && eslint .",
-    "lint:fix": "pnpm run stub && eslint . --fix",
+    "lint": "pnpm run stub && eslint",
+    "lint:fix": "pnpm run stub && eslint --fix",
     "release": "pnpm build && bumpp && pnpm publish"
   },
   "peerDependencies": {
