--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.8.10",
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.5.2",
   "description": "Brendan Dash's ESLint config",
   "author": "Brendan Dash <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -24,7 +24,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup --format esm,cjs --clean --dts",
+    "build": "tsup",
     "stub": "tsup --format esm",
     "dev": "pnpm dlx @eslint/config-inspector --config eslint.config.js",
     "build:inspector": "pnpm build && npx @eslint/config-inspector build",
@@ -40,22 +40,22 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint-react/eslint-plugin": "^1.27.0",
+    "@eslint-react/eslint-plugin": "^1.30.0",
     "@eslint/markdown": "^6.2.2",
-    "@next/eslint-plugin-next": "^15.1.7",
+    "@next/eslint-plugin-next": "^15.2.0",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
-    "@vitest/eslint-plugin": "^1.1.31",
-    "eslint-config-prettier": "^10.0.1",
+    "@vitest/eslint-plugin": "^1.1.36",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-n": "^17.16.1",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-compiler": "latest",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-tailwindcss": "^3.18.0",
@@ -66,17 +66,17 @@
     "eslint-plugin-yml": "^1.17.0",
     "globals": "^16.0.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "toml-eslint-parser": "^0.10.0",
     "vue-eslint-parser": "^9.4.3",
-    "yaml-eslint-parser": "^1.2.3"
+    "yaml-eslint-parser": "^1.3.0"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^1.0.0",
+    "@eslint/config-inspector": "^1.0.1",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
@@ -85,8 +85,8 @@
     "fs-extra": "^11.3.0",
     "react": "^19.0.0",
     "sucrase": "^3.35.0",
-    "tsup": "^8.3.6",
-    "typescript": "^5.7.3",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   },
   "pnpm": {
