--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "build": "tsup",
     "stub": "tsup --format esm",
-    "dev": "pnpm build && pnpm dlx @eslint/config-inspector --config eslint.config.js",
-    "build:inspector": "pnpm build && npx @eslint/config-inspector build",
+    "dev": "pnpm build && pnpm exec eslint-config-inspector --config eslint.config.js",
+    "build:inspector": "pnpm build && pnpm exec eslint-config-inspector build",
     "watch": "tsup --format esm,cjs --watch",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
@@ -40,18 +40,18 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint-react/eslint-plugin": "^1.30.0",
+    "@eslint-react/eslint-plugin": "^1.30.1",
     "@eslint/markdown": "^6.2.2",
-    "@next/eslint-plugin-next": "^15.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
+    "@next/eslint-plugin-next": "^15.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "@vitest/eslint-plugin": "^1.1.36",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-jsonc": "^2.19.1",
-    "eslint-plugin-n": "^17.16.1",
+    "eslint-plugin-n": "^17.16.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-prettier": "^5.2.3",
@@ -77,7 +77,7 @@
     "@eslint/config-inspector": "^1.0.1",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.8",
+    "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
