--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.10.2",
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.10.0",
   "description": "Brendan Dash's ESLint config",
   "author": "Brendan Dash <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -39,32 +39,32 @@
     "eslint": ">=9"
   },
   "dependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-    "@eslint-react/eslint-plugin": "^1.42.1",
-    "@eslint/markdown": "^6.3.0",
-    "@next/eslint-plugin-next": "^15.2.5",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
-    "@typescript-eslint/parser": "^8.29.1",
-    "@vitest/eslint-plugin": "^1.1.40",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@eslint-react/eslint-plugin": "^1.49.0",
+    "@eslint/markdown": "^6.4.0",
+    "@next/eslint-plugin-next": "^15.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/eslint-plugin": "^1.1.44",
     "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-plugin-import-x": "^4.10.2",
-    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-import-x": "^4.11.0",
+    "eslint-plugin-jsdoc": "^50.6.11",
     "eslint-plugin-jsonc": "^2.20.0",
     "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^4.11.0",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-perfectionist": "^4.12.3",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-toml": "^0.12.0",
-    "eslint-plugin-unicorn": "^58.0.0",
+    "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^10.0.0",
-    "eslint-plugin-yml": "^1.17.0",
-    "globals": "^16.0.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "eslint-plugin-yml": "^1.18.0",
+    "globals": "^16.1.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -76,10 +76,10 @@
     "@eslint/config-inspector": "^1.0.2",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
     "bumpp": "^10.1.0",
-    "eslint": "^9.24.0",
+    "eslint": "^9.26.0",
     "execa": "^9.5.2",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
@@ -87,11 +87,14 @@
     "sucrase": "^3.35.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "unrs-resolver"
     ]
   }
 }
