--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "prettier"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.mjs"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": [
     "dist"
   ],
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^8.46.3",
     "@vitest/eslint-plugin": "^1.4.1",
     "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-plugin-better-tailwindcss": "^3.7.10",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsdoc": "^61.1.12",
     "eslint-plugin-jsonc": "^2.21.0",
@@ -55,7 +56,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-solid": "^0.14.5",
-    "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-unicorn": "^62.0.0",
     "eslint-plugin-unused-imports": "^4.3.0",
