--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "fs-extra": "^11.3.3",
     "react": "^19.2.3",
     "sucrase": "^3.35.1",
-    "tsdown": "^0.19.0",
+    "tsdown": "^0.20.0-beta.3",
     "typescript": "^5.9.3",
     "vitest": "^4.0.17"
   }
