--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Setup
         run: npm i -g @antfu/ni
 
