--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -13,19 +13,30 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
+      - name: Set node
+        uses: actions/setup-node@v6
+        with:
+          node-version: lts/*
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-      - name: Update npm to latest
-        run: npm install -g npm@latest
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Setup
         run: npm i -g @antfu/ni
@@ -35,6 +46,9 @@ jobs:
 
       - name: Build
         run: nr build
+
+      - name: Typecheck
+        run: nr typecheck
 
       - name: Publish to NPM
         run: pnpm -r publish --access public --no-git-checks
