--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v6
         with:
@@ -40,7 +40,6 @@ jobs:
 
       - name: Publish to NPM
         run: pnpm -r publish --access public --no-git-checks
-        env:
 
       - run: npx changelogithub
         env:
