--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -24,7 +24,8 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: lts/*
-          registry-url: https://registry.npmjs.org
+        env:
+          NODE_AUTH_TOKEN:
 
       - name: Setup
         run: npm i -g @antfu/ni
